# village

./: .gitignore  Cargo.toml
assets/: house.glb  tree.glb  villager_man.glb  wood.glb  wood_hut.glb
blends/: house.blend  tree.blend  villager_man.blend  wood.blend  wood_hut.blend
src/: main.rs
src/assets/: mod.rs
src/fsm/: components.rs  mod.rs  transitions.rs
src/fsm/states/: bringing_to.rs  harvesting.rs  idle.rs  mod.rs  picking_up.rs  walking_to.rs  walking_to_harvest.rs
src/harvestable/: harvestable.rs  mod.rs  tree.rs
src/item_drop/: item_drop.rs  mod.rs  wood.rs
src/resource/: mod.rs
src/structure/: house.rs  mod.rs  wood_hut.rs
src/villager/: actions.rs  mod.rs  villager.rs
