[package]
name = "village"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.2"
bevy-inspector-egui = "0.29.1"
rand = { version = "0.9.0", features = ["alloc"] }
smooth-bevy-cameras = "0.13.0"
bevy_rapier3d = "0.29.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
